Add ukey2 submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,7 @@
 	path = third_party/depot_tools
 	url = https://chromium.googlesource.com/chromium/tools/depot_tools.git
 	branch = main
+[submodule "third_party/ukey2/ukey2"]
+	path = third_party/ukey2/ukey2
+	url = https://github.com/google/ukey2
+	branch = master
