--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "third_party/protobuf"]
 	path = third_party/protobuf
 	url = https://github.com/protocolbuffers/protobuf
-	branch = master
+	branch = 3.19.x
 [submodule "third_party/gtest"]
 	path = third_party/gtest
 	url = https://github.com/google/googletest
@@ -18,3 +18,6 @@
 	path = third_party/ukey2/ukey2
 	url = https://github.com/google/ukey2
 	branch = master
+[submodule "third_party/smhasher/smhasher"]
+	path = third_party/smhasher/smhasher
+	url = https://github.com/aappleby/smhasher
