--- a/.gitmodules
+++ b/.gitmodules
@@ -21,3 +21,9 @@
 [submodule "third_party/smhasher/smhasher"]
 	path = third_party/smhasher/smhasher
 	url = https://github.com/aappleby/smhasher
+[submodule "third_party/securemessage/securemessage"]
+	path = third_party/securemessage/securemessage
+	url = https://github.com/google/securemessage.git
+[submodule "third_party/google-toolbox-for-mac/google-toolbox-for-mac"]
+	path = third_party/google-toolbox-for-mac/google-toolbox-for-mac
+	url = https://github.com/google/google-toolbox-for-mac.git
