--- a/.gitmodules
+++ b/.gitmodules
@@ -21,9 +21,12 @@
 [submodule "third_party/smhasher/smhasher"]
 	path = third_party/smhasher/smhasher
 	url = https://github.com/aappleby/smhasher
+	branch = master
 [submodule "third_party/securemessage/securemessage"]
 	path = third_party/securemessage/securemessage
 	url = https://github.com/google/securemessage.git
+	branch = master
 [submodule "third_party/google-toolbox-for-mac/google-toolbox-for-mac"]
 	path = third_party/google-toolbox-for-mac/google-toolbox-for-mac
 	url = https://github.com/google/google-toolbox-for-mac.git
+	branch = main
