--- a/.github/workflows/validate-swift-package.yaml
+++ b/.github/workflows/validate-swift-package.yaml
@@ -18,7 +18,7 @@ jobs:
 
   test:
     name: Test
-    runs-on: macOS-latest
+    runs-on: macos-12
     steps:
     - uses: actions/checkout@v3
       with:
