--- a/internal/weave/BUILD
+++ b/internal/weave/BUILD
@@ -2,15 +2,18 @@ cc_library(
     name = "weave",
     srcs = [
         "packet.cc",
+        "packet_sequence_number_generator.cc",
         "packetizer.cc",
     ],
     hdrs = [
         "packet.h",
+        "packet_sequence_number_generator.h",
         "packetizer.h",
     ],
     deps = [
         "//internal/platform:base",
         "//internal/platform:types",
+        "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
@@ -29,6 +32,19 @@ cc_test(
         "@com_github_protobuf_matchers//protobuf-matchers",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/strings:str_format",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_test(
+    name = "packet_sequence_number_generator_test",
+    srcs = [
+        "packet_sequence_number_generator_test.cc",
+    ],
+    deps = [
+        ":weave",
+        "//internal/platform/implementation/g3",  # build_cleaner: keep
+        "@com_github_protobuf_matchers//protobuf-matchers",
         "@com_google_googletest//:gtest_main",
     ],
 )
