Add json external dependency for OSS Bazel Build.
PiperOrigin-RevId: 523234242

--- a/internal/platform/implementation/windows/BUILD
+++ b/internal/platform/implementation/windows/BUILD
@@ -192,7 +192,6 @@ cc_library(
         "//internal/platform/implementation/shared:count_down_latch",
         "//internal/platform/implementation/shared:file",
         "//internal/platform/implementation/windows/generated:types",
-        "//third_party/json",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/status",
@@ -201,6 +200,7 @@ cc_library(
         "@com_google_absl//absl/strings:str_format",
         "@com_google_absl//absl/synchronization",
         "@com_google_absl//absl/time",
+        "@nlohmann_json//:json",
     ],
 )
 
@@ -218,7 +218,7 @@ cc_library(
     ],
     deps = [
         "//internal/platform:base",
-        "//third_party/json",
+        "@nlohmann_json//:json",
     ],
 )
 
