--- a/.gitmodules
+++ b/.gitmodules
@@ -33,3 +33,7 @@
 [submodule "third_party/mbedtls"]
 	path = third_party/mbedtls
 	url = https://github.com/ARMmbed/mbedtls
+[submodule "third_party/json/json"]
+	path = third_party/json/json
+	url = https://github.com/nlohmann/json
+	branch = master
