--- a/presence/fpp/fpp_c_ffi/Cargo.toml
+++ b/presence/fpp/fpp_c_ffi/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
-name = "fpp"
+name = "fpp_c_ffi"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clock = "0.3.2"
-ilog = "1.0.1"
-lazy_static = "1.4.0"
-num-traits = "0.2.15"
+fpp = {path = "../fpp"}
