--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -38,8 +38,8 @@ jobs:
     - name: Build Presence
       run: CC=clang CXX=clang++ bazel build --check_visibility=false //presence --spawn_strategy=standalone --//presence/implementation:enable_rust_ldt=False
 
-    build-rust:
-      name: Build Rust on Linux
+  build-rust-linux:
+    name: Build Rust on Linux
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
