--- a/fastpair/rust/Cargo.toml
+++ b/fastpair/rust/Cargo.toml
@@ -22,6 +22,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 futures = { version = "0.3", features = ["executor"]}
+tracing = "0.1.37"
 cfg-if = "1.0.0"
 
 [target.'cfg(windows)'.dependencies]
