--- a/fastpair/rust/Cargo.toml
+++ b/fastpair/rust/Cargo.toml
@@ -20,3 +20,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0"
+futures = { version = "0.3", features = ["executor"]}
+cfg-if = "1.0.0"
+
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.48", features = ["Devices_Bluetooth", "Devices_Bluetooth_Advertisement", "Foundation"]}
