--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -47,16 +47,6 @@ jobs:
         submodules: recursive
     - name: Build FPP
       run:  cargo build --manifest-path presence/fpp/fpp/Cargo.toml
-    - name: Build Fast Pair
+    - name: Build Fairpair
       run:  cargo build --manifest-path fastpair/rust/Cargo.toml
-  
-  build-rust-windows:
-    name: Build Rust on Windows
-    runs-on: windows-latest
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        submodules: recursive
-    - name: Build Fast Pair
-      run:  cargo build --manifest-path fastpair/rust/Cargo.toml
-  
+        
