--- a/fastpair/rust/Cargo.toml
+++ b/fastpair/rust/Cargo.toml
@@ -29,6 +29,7 @@ thiserror = "1.0.43"
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.48", features = [
     "Devices_Bluetooth",
+    "Devices_Enumeration",
     "Devices_Bluetooth_Advertisement",
     "Foundation",
 ] }
