[fp-rs] Providing constructs for generating Rust-side bridge code

--- a/fastpair/rust/demo/windows/CMakeLists.txt
+++ b/fastpair/rust/demo/windows/CMakeLists.txt
@@ -56,6 +56,7 @@ add_subdirectory("runner")
 # Generated plugin build rules, which manage building the plugins and adding
 # them to the application.
 include(flutter/generated_plugins.cmake)
+include(./rust.cmake)
 
 
 # === Installation ===
