--- a/fastpair/rust/demo/rust/Cargo.toml
+++ b/fastpair/rust/demo/rust/Cargo.toml
@@ -9,4 +9,8 @@ edition = "2021"
 crate-type = ["lib", "cdylib", "staticlib"]
 
 [dependencies]
+anyhow = "1.0"
+bluetooth = { version = "0.1", path = "../../bluetooth" }
 flutter_rust_bridge = "1"
+futures = { version = "0.3", features = ["executor"] }
+tracing = "0.1.37"
