--- a/fastpair/rust/demo/rust/Cargo.toml
+++ b/fastpair/rust/demo/rust/Cargo.toml
@@ -13,4 +13,6 @@ anyhow = "1.0"
 bluetooth = { version = "0.1", path = "../../bluetooth" }
 flutter_rust_bridge = "1"
 futures = { version = "0.3", features = ["executor"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tracing = "0.1.37"
