--- a/fastpair/rust/demo/rust/Cargo.toml
+++ b/fastpair/rust/demo/rust/Cargo.toml
@@ -16,3 +16,4 @@ futures = { version = "0.3", features = ["executor"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tracing = "0.1.37"
+ttl_cache = "0.5.1"
