--- a/fastpair/rust/demo/rust/Cargo.toml
+++ b/fastpair/rust/demo/rust/Cargo.toml
@@ -9,7 +9,6 @@ edition = "2021"
 crate-type = ["lib", "cdylib", "staticlib"]
 
 [dependencies]
-anyhow = "1.0"
 bluetooth = { version = "0.1", path = "../../bluetooth" }
 flutter_rust_bridge = "1"
 futures = { version = "0.3", features = ["executor"] }
@@ -17,3 +16,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tracing = "0.1.37"
 ttl_cache = "0.5.1"
+thiserror = "1.0.43"
