--- a/internal/platform/BUILD
+++ b/internal/platform/BUILD
@@ -360,6 +360,7 @@ cc_library(
         "//internal/interop:__pkg__",
         "//internal/network:__subpackages__",
         "//internal/platform/implementation/g3:__pkg__",
+        "//internal/platform/implementation/linux:__subpackages__",
         "//internal/platform/implementation/windows:__subpackages__",
         "//internal/preferences:__subpackages__",
         "//internal/test:__subpackages__",
