Add additional files.

--- a/internal/platform/implementation/linux/BUILD
+++ b/internal/platform/implementation/linux/BUILD
@@ -5,6 +5,17 @@ cc_library(
     hdrs = [
         "atomic_boolean.h",
         "device_info.h",
+        "atomic_reference.h",
+        "bluetooth_adapter.h",
+        "condition_variable.h",
+        "device_info.h",
+        "executor.h",
+        "future.h",
+        "mutex.h",
+        "preferences_manager.h",
+        "scheduled_executor.h",
+        "submittable_executor.h",
+        "timer.h",
     ],
     srcs = [
         "device_info.cc",
@@ -98,12 +109,29 @@ cc_library(
 cc_library(
     name = "linux",
     srcs = [
+        "avahi.cc",
         "bluetooth_adapter.cc",
         "bluetooth_bluez_profile.cc",
         "bluetooth_classic_device.cc",
         "bluetooth_classic_medium.cc",
         "bluetooth_classic_socket.cc",
         "bluetooth_pairing.cc",
+        "bluez.cc",
+        "dbus.cc",
+        "executor.cc",
+        "platform.cc",
+        "preferences_manager.cc",
+        "preferences_repository.cc",
+        "scheduled_executor.cc",
+        "submittable_executor.cc",
+        "system_clock.cc",
+        "thread_pool.cc",
+        "utils.cc",
+        "wifi_hotspot.cc",
+        "wifi_hotspot_server_socket.cc",
+        "wifi_lan.cc",
+        "wifi_lan_server_socket.cc",
+        "wifi_medium.cc",
     ],
     visibility = [
         "//connections:__subpackages__",
