Add Wifi Direct files.

--- a/internal/platform/implementation/linux/BUILD
+++ b/internal/platform/implementation/linux/BUILD
@@ -60,6 +60,9 @@ cc_library(
         "networkmanager_device_wireless_client_glue.h",
         "networkmanager_ip4config_client_glue.h",
         "stream.h",
+        "wifi_direct.h",
+        "wifi_direct_server_socket.h",
+        "wifi_direct_socket.h",
         "wifi_hotspot.h",
         "wifi_hotspot_server_socket.h",
         "wifi_hotspot_socket.h",
@@ -127,6 +130,8 @@ cc_library(
         "system_clock.cc",
         "thread_pool.cc",
         "utils.cc",
+        "wifi_direct.cc",
+        "wifi_direct_server_socket.cc",
         "wifi_hotspot.cc",
         "wifi_hotspot_server_socket.cc",
         "wifi_lan.cc",
