--- a/internal/platform/implementation/linux/BUILD
+++ b/internal/platform/implementation/linux/BUILD
@@ -4,8 +4,8 @@ cc_library(
     name = "types",
     hdrs = [
         "atomic_boolean.h",
-        "device_info.h",
         "atomic_reference.h",
+        "atomic_uint32.h",
         "bluetooth_adapter.h",
         "condition_variable.h",
         "device_info.h",
@@ -13,9 +13,17 @@ cc_library(
         "future.h",
         "mutex.h",
         "preferences_manager.h",
+        "preferences_repository.h",
         "scheduled_executor.h",
         "submittable_executor.h",
         "timer.h",
+        "timer_queue.h",
+        "thread_pool.h",
+        "log_message.h",
+        "org_freedesktop_logcontrol_server_glue.h",
+        "hostname_client_glue.h",
+        "login_session_client_glue.h",
+        "utils.h",
     ],
     srcs = [
         "device_info.cc",
@@ -50,6 +58,7 @@ cc_library(
         "bluetooth_pairing.h",
         "bluez.h",
         "bluez_adapter_client_glue.h",
+        "bluez_device_client_glue.h",
         "bluez_profile_glue.h",
         "bluez_profile_manager_client_glue.h",
         "dbus.h",
@@ -143,6 +152,7 @@ cc_library(
         "//fastpair:__subpackages__",
         "//location/nearby:__subpackages__",
         "//presence:__subpackages__",
+        "//third_party/nearby/sharing:__subpackages__",
     ],
     deps = [
         ":comm",
@@ -161,8 +171,6 @@ cc_library(
         "//internal/platform/implementation:types",
         "//internal/platform/implementation/shared:count_down_latch",
         "//internal/platform/implementation/shared:file",
-        "//third_party/webrtc/files/stable/webrtc/api/task_queue:default_task_queue_factory",
-        "//third_party/webrtc/files/stable/webrtc/rtc_base:checks",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/functional:any_invocable",
@@ -176,6 +184,7 @@ cc_library(
         "@com_google_absl//absl/time",
         "@com_google_absl//absl/types:optional",
         "@nlohmann_json//:json",
+        "@libsystemd//:lib",
         "@sdbus_cpp//:lib",
     ],
 )
