--- a/internal/platform/implementation/linux/BUILD
+++ b/internal/platform/implementation/linux/BUILD
@@ -22,6 +22,7 @@ cc_library(
         "log_message.h",
         "org_freedesktop_logcontrol_server_glue.h",
         "hostname_client_glue.h",
+        "login_manager_client_glue.h",
         "login_session_client_glue.h",
         "utils.h",
     ],
@@ -34,7 +35,6 @@ cc_library(
     deps = [
         ":comm",
         "//internal/platform/implementation:types",
-        "//internal/platform:logging",
         "@com_google_absl//absl/strings",
         "@libsystemd//:lib",
         "@sdbus_cpp//:lib",
@@ -162,7 +162,6 @@ cc_library(
         "//internal/platform:base",
         "//internal/platform:cancellation_flag",
         "//internal/platform:comm",
-        "//internal/platform:logging",
         "//internal/platform:types",
         "//internal/platform:uuid",
         "//internal/platform/flags:platform_flags",
@@ -241,7 +240,6 @@ cc_test(
         ":types",
         ":windows",
         "//internal/platform:base",
-        "//internal/platform:logging",
         "//internal/platform/implementation:comm",
         "//internal/platform/implementation:platform",
         "//internal/platform/implementation:types",
