Move dbus stubs to generated package.

--- a/internal/platform/implementation/linux/BUILD
+++ b/internal/platform/implementation/linux/BUILD
@@ -33,10 +33,6 @@ cc_library(
         "timer.h",
         "thread_pool.h",
         "log_message.h",
-        "org_freedesktop_logcontrol_server_glue.h",
-        "hostname_client_glue.h",
-        "login_manager_client_glue.h",
-        "login_session_client_glue.h",
         "utils.h",
     ],
     srcs = [
@@ -59,9 +55,6 @@ cc_library(
     name = "comm",
     hdrs = [
         "avahi.h",
-        "avahi_entrygroup_client_glue.h",
-        "avahi_server_client_glue.h",
-        "avahi_servicebrowser_client_glue.h",
         "ble_medium.h",
         "ble_v2_medium.h",
         "bluetooth_adapter.h",
@@ -73,17 +66,7 @@ cc_library(
         "bluetooth_devices.h",
         "bluetooth_pairing.h",
         "bluez.h",
-        "bluez_adapter_client_glue.h",
-        "bluez_device_client_glue.h",
-        "bluez_profile_glue.h",
-        "bluez_profile_manager_client_glue.h",
         "dbus.h",
-        "networkmanager_accesspoint_client_glue.h",
-        "networkmanager_client_glue.h",
-        "networkmanager_connection_active_client_glue.h",
-        "networkmanager_device_wifip2p_client_glue.h",
-        "networkmanager_device_wireless_client_glue.h",
-        "networkmanager_ip4config_client_glue.h",
         "stream.h",
         "wifi_direct.h",
         "wifi_direct_server_socket.h",
@@ -104,6 +87,7 @@ cc_library(
         "//internal/platform:uuid",
         "//internal/platform/implementation:comm",
         "//internal/platform/implementation:types",
+        "//internal/platform/implementation/linux/generated:types",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
@@ -188,6 +172,7 @@ cc_library(
         "//internal/platform/implementation:types",
         "//internal/platform/implementation/shared:count_down_latch",
         "//internal/platform/implementation/shared:file",
+        "//internal/platform/implementation/linux/generated:types",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/functional:any_invocable",
