Split off most of NetworkManager code into their own files.

--- a/internal/platform/implementation/linux/BUILD
+++ b/internal/platform/implementation/linux/BUILD
@@ -67,6 +67,9 @@ cc_library(
         "bluetooth_pairing.h",
         "bluez.h",
         "dbus.h",
+        "network_manager.h",
+        "network_manager_active_connection.h",
+        "network_manager_access_point.h",
         "stream.h",
         "wifi_direct.h",
         "wifi_direct_server_socket.h",
@@ -133,6 +136,8 @@ cc_library(
         "bluez.cc",
         "dbus.cc",
         "executor.cc",
+        "network_manager.cc",
+        "network_manager_active_connection.cc",
         "platform.cc",
         "preferences_manager.cc",
         "preferences_repository.cc",
