Add BluetoothInputStream, BluetoothOutputStream.

--- a/internal/platform/implementation/linux/BUILD
+++ b/internal/platform/implementation/linux/BUILD
@@ -127,9 +127,9 @@ cc_library(
         "avahi.cc",
         "bluetooth_adapter.cc",
         "bluetooth_bluez_profile.cc",
+        "bluetooth_classic_socket.cc",
         "bluetooth_classic_device.cc",
         "bluetooth_classic_medium.cc",
-        "bluetooth_classic_socket.cc",
         "bluetooth_classic_server_socket.cc",
         "bluetooth_devices.cc",
         "bluetooth_pairing.cc",
@@ -142,6 +142,7 @@ cc_library(
         "preferences_manager.cc",
         "preferences_repository.cc",
         "scheduled_executor.cc",
+        "stream.cc",
         "submittable_executor.cc",
         "system_clock.cc",
         "thread_pool.cc",
@@ -212,6 +213,7 @@ cc_library(
     deps = [
         "//internal/platform:base",
         "@nlohmann_json//:json",
+        ":types",
     ],
 )
 
@@ -221,25 +223,20 @@ cc_test(
     srcs = [
         "atomic_boolean_test.cc",
         "atomic_reference_test.cc",
-        "ble_gatt_server_test.cc",
-        "ble_medium_test.cc",
-        "ble_v2_peripheral_test.cc",
-        "ble_v2_test.cc",
-        "bluetooth_adapter_test.cc",
-        "count_down_latch_test.cc",
-        "crypto_test.cc",
-        "device_info_test.cc",
-        "executor_test.cc",
-        "file_path_test.cc",
-        "http_loader_test.cc",
-        "preferences_manager_test.cc",
-        "preferences_repository_test.cc",
-        "scheduled_executor_test.cc",
-        "submittable_executor_test.cc",
-        "thread_pool_test.cc",
-        "timer_test.cc",
-        "utils_test.cc",
-        "webrtc_test.cc",
+        "mutex_test.cc",
+        # "bluetooth_adapter_test.cc",
+        # "crypto_test.cc",
+        # "device_info_test.cc",
+        # "executor_test.cc",
+        # "file_path_test.cc",
+        # "http_loader_test.cc",
+        # "preferences_manager_test.cc",
+        # "preferences_repository_test.cc",
+        # "scheduled_executor_test.cc",
+        # "submittable_executor_test.cc",
+        # "thread_pool_test.cc",
+        # "timer_test.cc",
+        # "utils_test.cc",
     ],
     tags = ["notap"],
     deps = [
@@ -247,7 +244,7 @@ cc_test(
         ":crypto",
         ":test_utils",
         ":types",
-        ":windows",
+        ":linux",
         "//internal/platform:base",
         "//internal/platform/implementation:comm",
         "//internal/platform/implementation:platform",
