Add an initial BLE v2 implementation.

--- a/internal/platform/implementation/linux/BUILD
+++ b/internal/platform/implementation/linux/BUILD
@@ -55,8 +55,10 @@ cc_library(
     name = "comm",
     hdrs = [
         "avahi.h",
+        "ble_gatt_server.h",
         "ble_medium.h",
         "ble_v2_medium.h",
+        "ble_v2_server_socket.h",
         "bluetooth_adapter.h",
         "bluetooth_bluez_profile.h",
         "bluetooth_classic_device.h",
@@ -66,6 +68,12 @@ cc_library(
         "bluetooth_devices.h",
         "bluetooth_pairing.h",
         "bluez.h",
+        "bluez_advertisement_monitor.h",
+        "bluez_advertisement_monitor_manager.h",
+        "bluez_gatt_characteristic.h",
+        "bluez_gatt_manager.h",
+        "bluez_gatt_service.h",
+        "bluez_le_advertisement.h",
         "dbus.h",
         "network_manager.h",
         "network_manager_active_connection.h",
@@ -125,6 +133,8 @@ cc_library(
     name = "linux",
     srcs = [
         "avahi.cc",
+        "ble_gatt_server.cc",
+        "ble_v2_medium.cc",
         "bluetooth_adapter.cc",
         "bluetooth_bluez_profile.cc",
         "bluetooth_classic_socket.cc",
@@ -134,6 +144,10 @@ cc_library(
         "bluetooth_devices.cc",
         "bluetooth_pairing.cc",
         "bluez.cc",
+        "bluez_advertisement_monitor.cc",
+        "bluez_gatt_characteristic.cc",
+        "bluez_gatt_service.cc",
+        "bluez_le_advertisement.cc",
         "dbus.cc",
         "executor.cc",
         "network_manager.cc",
@@ -224,6 +238,7 @@ cc_test(
         "atomic_boolean_test.cc",
         "atomic_reference_test.cc",
         "mutex_test.cc",
+        "utils_test.cc",
         # "bluetooth_adapter_test.cc",
         # "crypto_test.cc",
         # "device_info_test.cc",
@@ -236,7 +251,6 @@ cc_test(
         # "submittable_executor_test.cc",
         # "thread_pool_test.cc",
         # "timer_test.cc",
-        # "utils_test.cc",
     ],
     tags = ["notap"],
     deps = [
