--- a/internal/platform/implementation/linux/BUILD
+++ b/internal/platform/implementation/linux/BUILD
@@ -72,7 +72,7 @@ cc_library(
         "bluez_advertisement_monitor_manager.h",
         "bluez_gatt_characteristic_server.h",
         "bluez_gatt_manager.h",
-        "bluez_gatt_service.h",
+        "bluez_gatt_service_server.h",
         "bluez_le_advertisement.h",
         "dbus.h",
         "network_manager.h",
@@ -146,7 +146,7 @@ cc_library(
         "bluez.cc",
         "bluez_advertisement_monitor.cc",
         "bluez_gatt_characteristic_server.cc",
-        "bluez_gatt_service.cc",
+        "bluez_gatt_service_server.cc",
         "bluez_le_advertisement.cc",
         "dbus.cc",
         "executor.cc",
