Add support for GATT clients.

--- a/internal/platform/implementation/linux/BUILD
+++ b/internal/platform/implementation/linux/BUILD
@@ -56,6 +56,7 @@ cc_library(
     hdrs = [
         "avahi.h",
         "ble_gatt_server.h",
+        "ble_gatt_client.h",
         "ble_medium.h",
         "ble_v2_medium.h",
         "ble_v2_server_socket.h",
@@ -70,8 +71,10 @@ cc_library(
         "bluez.h",
         "bluez_advertisement_monitor.h",
         "bluez_advertisement_monitor_manager.h",
+        "bluez_gatt_characteristic_client.h",
         "bluez_gatt_characteristic_server.h",
         "bluez_gatt_manager.h",
+        "bluez_gatt_service_client.h",
         "bluez_gatt_service_server.h",
         "bluez_le_advertisement.h",
         "dbus.h",
@@ -133,6 +136,7 @@ cc_library(
     name = "linux",
     srcs = [
         "avahi.cc",
+        "ble_gatt_client.cc",
         "ble_gatt_server.cc",
         "ble_v2_medium.cc",
         "bluetooth_adapter.cc",
@@ -145,6 +149,7 @@ cc_library(
         "bluetooth_pairing.cc",
         "bluez.cc",
         "bluez_advertisement_monitor.cc",
+        "bluez_gatt_characteristic_client.cc",
         "bluez_gatt_characteristic_server.cc",
         "bluez_gatt_service_server.cc",
         "bluez_le_advertisement.cc",
