--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 build/**
 .build
 
+bazel-*/
+
 # We might want to create a real project config at some point, but for now we
 # want to ignore adding the auto-generated one.
 .vscode/
