--- a/internal/platform/implementation/windows/BUILD
+++ b/internal/platform/implementation/windows/BUILD
@@ -41,20 +41,16 @@ cc_library(
         "timer.h",
         "utils.h",
     ],
-    copts = ["-Ithird_party/nearby/internal/platform/implementation/windows/generated"],
     defines = ["_SILENCE_CLANG_COROUTINE_MESSAGE"],
     visibility = ["//third_party/nearby/sharing/internal/impl/windows:__pkg__"],
     deps = [
         ":comm",
-        "//base",
-        "//base:stringprintf",
         "//internal/base:bluetooth_address",
         "//internal/platform:base",
         "//internal/platform:types",
         "//internal/platform:uuid",
         "//internal/platform/implementation:types",
-        "//internal/platform/implementation/windows/generated:types",
-        "//strings:strappendv",
+        # "//internal/platform/implementation/windows/generated:types",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/functional:any_invocable",
@@ -63,6 +59,8 @@ cc_library(
         "@com_google_absl//absl/synchronization",
         "@com_google_absl//absl/time",
         "@com_google_absl//absl/types:span",
+        "@com_google_absl//absl/log:log_streamer",
+        "@com_google_absl//absl/log:absl_log",
         "@nlohmann_json//:json",
     ],
 )
@@ -114,7 +112,6 @@ cc_library(
         "//internal/platform:uuid",
         "//internal/platform/implementation:comm",
         "//internal/platform/implementation:types",
-        "//internal/platform/implementation/windows/generated:types",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
@@ -187,11 +184,11 @@ cc_library(
         "wifi_lan_socket.cc",
         "wifi_medium.cc",
     ],
-    # This is the temporary solution to solve compilation error of Win32 WFDxxx() related API.
-    # WFD API is only support after _WIN32_WINNT_WIN8, but the current lexan _WIN32_WINNT is set to _WIN32_WINNT_WIN7
     copts = [
         "-DNO_INTEL_PIE",
-        "-Ithird_party/nearby/internal/platform/implementation/windows/generated -D_WIN32_WINNT=_WIN32_WINNT_WIN10 -DWINVER=_WIN32_WINNT_WIN10",
+        "-DNO_WEBRTC",
+        "-D_WIN32_WINNT=0x0A00",
+        "-DWINVER=0x0A00",
     ],
     defines = ["_SILENCE_CLANG_COROUTINE_MESSAGE"],
     visibility = [
@@ -205,7 +202,6 @@ cc_library(
         ":comm",
         ":crypto",  # build_cleaner: keep
         ":types",
-        "//internal/account",
         "//internal/flags:nearby_flags",
         "//internal/platform:base",
         "//internal/platform:cancellation_flag",
@@ -218,9 +214,7 @@ cc_library(
         "//internal/platform/implementation:types",
         "//internal/platform/implementation/shared:count_down_latch",
         "//internal/platform/implementation/shared:file",
-        "//internal/platform/implementation/windows/generated:types",
-        "//third_party/webrtc/files/stable/webrtc/api/task_queue:default_task_queue_factory",
-        "//third_party/webrtc/files/stable/webrtc/rtc_base:checks",
+        # "//internal/platform/implementation/windows/generated:types",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/functional:any_invocable",
@@ -283,7 +277,7 @@ cc_test(
         "wifi_hotspot_test.cc",
         "wifi_medium_test.cc",
     ],
-    copts = ["-Ithird_party/nearby/internal/platform/implementation/windows/generated -DCORE_ADAPTER_DLL"],
+    copts = ["-DCORE_ADAPTER_DLL"],
     tags = ["notap"],
     deps = [
         ":comm",
@@ -297,7 +291,7 @@ cc_test(
         "//internal/platform/implementation:platform",
         "//internal/platform/implementation:types",
         "//internal/platform/implementation/shared:count_down_latch",
-        "//internal/platform/implementation/windows/generated:types",
+        # "//internal/platform/implementation/windows/generated:types",
         "@com_github_protobuf_matchers//protobuf-matchers",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/strings",
