--- a/internal/platform/implementation/windows/BUILD
+++ b/internal/platform/implementation/windows/BUILD
@@ -103,7 +103,7 @@ cc_library(
         "wifi_intel.h",
         "wifi_lan.h",
     ],
-    copts = ["-DNO_INTEL_PIE"],
+    defines = ["NO_INTEL_PIE"],
     visibility = ["//visibility:private"],
     deps = [
         "//internal/platform:base",
@@ -184,13 +184,38 @@ cc_library(
         "wifi_lan_socket.cc",
         "wifi_medium.cc",
     ],
-    copts = [
-        "-DNO_INTEL_PIE",
-        "-DNO_WEBRTC",
-        "-D_WIN32_WINNT=0x0A00",
-        "-DWINVER=0x0A00",
+    defines = [
+        "_SILENCE_CLANG_COROUTINE_MESSAGE",
+        "NO_INTEL_PIE",
+        "NO_WEBRTC",
+        "_WIN32_WINNT=0x0A00",
+        "WINVER=0x0A00",
     ],
-    defines = ["_SILENCE_CLANG_COROUTINE_MESSAGE"],
+    linkopts = [
+        "wininet.lib",
+        "advapi32.lib",
+        "bcrypt.lib",
+        "cfgmgr32.lib",
+        "comdlg32.lib",
+        "gdi32.lib",
+        "kernel32.lib",
+        "odbc32.lib",
+        "odbccp32.lib",
+        "ole32.lib",
+        "oleaut32.lib",
+        "shell32.lib",
+        "user32.lib",
+        "uuid.lib",
+        "winmm.lib",
+        "winspool.lib",
+        "wtsapi32.lib",
+        "comsuppwd.lib",
+        "setupapi.lib",
+        "dnsapi.lib",
+        "wlanapi.lib",
+        "shlwapi.lib",
+        "ws2_32.lib",
+    ],
     visibility = [
         "//connections:__subpackages__",
         "//fastpair:__subpackages__",
@@ -277,7 +302,7 @@ cc_test(
         "wifi_hotspot_test.cc",
         "wifi_medium_test.cc",
     ],
-    copts = ["-DCORE_ADAPTER_DLL"],
+    defines = ["CORE_ADAPTER_DLL"],
     tags = ["notap"],
     deps = [
         ":comm",
