--- a/.gitmodules
+++ b/.gitmodules
@@ -14,18 +14,6 @@
 	path = third_party/depot_tools
 	url = https://chromium.googlesource.com/chromium/tools/depot_tools.git
 	branch = main
-[submodule "third_party/ukey2/ukey2"]
-	path = third_party/ukey2/ukey2
-	url = https://github.com/google/ukey2
-	branch = master
-[submodule "third_party/smhasher/smhasher"]
-	path = third_party/smhasher/smhasher
-	url = https://github.com/aappleby/smhasher
-	branch = master
-[submodule "third_party/securemessage/securemessage"]
-	path = third_party/securemessage/securemessage
-	url = https://github.com/google/securemessage.git
-	branch = master
 [submodule "third_party/google-toolbox-for-mac/google-toolbox-for-mac"]
 	path = third_party/google-toolbox-for-mac/google-toolbox-for-mac
 	url = https://github.com/google/google-toolbox-for-mac.git
@@ -33,10 +21,36 @@
 [submodule "third_party/mbedtls"]
 	path = third_party/mbedtls
 	url = https://github.com/ARMmbed/mbedtls
-[submodule "third_party/json/json"]
-	path = third_party/json/json
-	url = https://github.com/nlohmann/json
-	branch = master
 [submodule "third_party/micro-ecc"]
 	path = third_party/micro-ecc
 	url = https://github.com/kmackay/micro-ecc
+[submodule "third_party/json"]
+	path = third_party/json
+	url = https://github.com/deling-google/json.git
+[submodule "third_party/smhasher"]
+	path = third_party/smhasher
+	url = https://github.com/aappleby/smhasher
+[submodule "third_party/ukey2"]
+	path = third_party/ukey2
+	url = https://github.com/google/ukey2
+[submodule "third_party/boringssl"]
+	path = third_party/boringssl
+	url = https://github.com/google/boringssl
+[submodule "third_party/glog"]
+	path = third_party/glog
+	url = https://github.com/google/glog
+[submodule "third_party/gflags"]
+	path = third_party/gflags
+	url = https://github.com/gflags/gflags.git
+[submodule "third_party/bazel_skylib"]
+	path = third_party/bazel_skylib
+	url = https://github.com/bazelbuild/bazel-skylib
+[submodule "third_party/rules_foreign_cc"]
+	path = third_party/rules_foreign_cc
+	url = https://github.com/bazelbuild/rules_foreign_cc
+[submodule "third_party/dart_lang"]
+	path = third_party/dart_lang
+	url = https://github.com/deling-google/dart-lang.git
+[submodule "third_party/re2"]
+	path = third_party/re2
+	url = https://github.com/google/re2
