C# adapter (initial draft)
Bindings for start discovery and start advertising (not verified yet)

--- a/connections/dart/BUILD
+++ b/connections/dart/BUILD
@@ -25,6 +25,8 @@ cc_binary(
     srcs = [
         "core_adapter_dart.cc",
         "core_adapter_dart.h",
+        "core_adapter_sharp.cc",
+        "core_adapter_sharp.h",
     ],
     linkshared = 1,
     tags = ["windows-dll"],
