--- a/hello_cloud_wpf/hello_cloud_wpf/HelloCloudWpf.csproj
+++ b/hello_cloud_wpf/hello_cloud_wpf/HelloCloudWpf.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Cloud.Storage.V1" Version="4.7.0" />
     <PackageReference Include="WpfAnimatedGif" Version="2.0.2" />
   </ItemGroup>
 
