--- a/connections/c/BUILD
+++ b/connections/c/BUILD
@@ -66,6 +66,7 @@ cc_library(
         "@com_google_absl//absl/strings:str_format",
         "@com_google_absl//absl/types:span",
     ],
+    alwayslink = 1,
 )
 
 cc_binary(
