--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ build/**
 
 bazel-*/
 
+.vs/
+bin/
+obj/
+
 # We might want to create a real project config at some point, but for now we
 # want to ignore adding the auto-generated one.
 .vscode/
