--- a/hello_cloud_android/app/src/main/AndroidManifest.xml
+++ b/hello_cloud_android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HelloWorld"
+        android:theme="@style/Theme.HelloCloud"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
